--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   data-target="#datetimepicker"
                   data-toggle="datetimepicker"
                 >
-                  <i class="bi bi-calendar3"></i>
+                  <i class="fa-solid fa-calendar"></i>
                 </button>
               </div>
             </div>
