--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href=".//node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
+    />
     <title>DateTime</title>
   </head>
   <body>
@@ -97,15 +101,15 @@
           display: {
             icons: {
               type: "icons",
-              time: "fa-solid fa-clock",
-              date: "fa-solid fa-calendar",
-              up: "fa-solid fa-arrow-up",
-              down: "fa-solid fa-arrow-down",
-              previous: "fa-solid fa-chevron-left",
-              next: "fa-solid fa-chevron-right",
-              today: "fa-solid fa-calendar-check",
-              clear: "fa-solid fa-trash",
-              close: "fa-solid fa-xmark",
+              time: "bi bi-clock",
+              date: "bi bi-calendar-week",
+              up: "bi bi-arrow-up",
+              down: "bi bi-arrow-down",
+              previous: "bi bi-chevron-left",
+              next: "bi bi-chevron-right",
+              today: "bi bi-calendar-check",
+              clear: "bi bi-trash",
+              close: "bi bi-x",
             },
             sideBySide: false,
             calendarWeeks: false,
