--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
       rel="stylesheet"
       href="./node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
     />
+    <!-- OR -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <title>DateTime</title>
   </head>
   <body>
